--- a/scss/style.css
+++ b/scss/style.css
@@ -7,6 +7,13 @@
   font-family: "Montserrat", sans-serif;
 }
 
+.botonver {
+  width: 100px;
+  height: 40px;
+  border-radius: 5px;
+  padding: 8px;
+}
+
 /* Navegador*/
 .navegador {
   background-color: white;
@@ -15,6 +22,17 @@
   top: 0px;
   display: flex;
   justify-content: space-between;
+  align-items: center;
+}
+.navegador .ícono-menu {
+  color: black;
+  font-size: 25px;
+  display: none;
+}
+@media (max-width: 576px) {
+  .navegador .ícono-menu {
+    display: block;
+  }
 }
 
 .logo {
@@ -45,6 +63,7 @@
 .portada-imagen {
   width: 100%;
   height: 500px;
+  -o-object-fit: cover;
      object-fit: cover;
 }
 
@@ -58,7 +77,7 @@
   width: 200px;
   height: 200px;
   font-size: x-small;
-  background-color: rgb(255, 254, 254);
+  background-color: white;
   border: 5px solid #8C0303;
   margin: 10px;
   padding: 10px;
@@ -87,7 +106,7 @@
   width: 200px;
   height: 200px;
   font-size: x-small;
-  background-color: rgb(255, 254, 254);
+  background-color: white;
   border: 5px solid #8C0303;
   margin: 10px;
   padding: 10px;
@@ -116,7 +135,7 @@
   width: 200px;
   height: 200px;
   font-size: x-small;
-  background-color: rgb(255, 254, 254);
+  background-color: white;
   border: 5px solid #8C0303;
   margin: 10px;
   padding: 10px;
@@ -138,16 +157,16 @@
   justify-content: space-around;
   gap: 25px;
 }
-.tarjetas titulo {
+.tarjetas título {
   color: white;
-  font-size: medium;
+  font-size: small;
   text-align: center;
   text-decoration: underline;
 }
 
 .sol {
   width: 300px;
-  font-size: x-small;
+  font-size: small;
   background-color: #730D0D;
   margin: 10px;
   padding: 25px;
@@ -155,6 +174,8 @@
   position: relative;
   flex-direction: column;
   gap: 20px;
+  color: white;
+  text-align: center;
 }
 .sol img {
   width: 100%;
@@ -164,7 +185,7 @@
 
 .rx {
   width: 300px;
-  font-size: x-small;
+  font-size: small;
   background-color: #730D0D;
   margin: 10px;
   padding: 25px;
@@ -172,6 +193,8 @@
   position: relative;
   flex-direction: column;
   gap: 20px;
+  color: white;
+  text-align: center;
 }
 .rx img {
   width: 100%;
@@ -181,7 +204,7 @@
 
 .lc {
   width: 300px;
-  font-size: x-small;
+  font-size: small;
   background-color: #730D0D;
   margin: 10px;
   padding: 25px;
@@ -189,21 +212,25 @@
   position: relative;
   flex-direction: column;
   gap: 20px;
+  color: white;
+  text-align: center;
 }
 .lc img {
   width: 100%;
-  height: 150px;
   -o-object-fit: cover;
      object-fit: cover;
 }
 
 .botonver {
-  width: 100px;
-  height: 40px;
   background-color: white;
-  color: rgb(161, 41, 41);
+  color: #730D0D;
   border: 0px;
-  padding: 10px;
+  transform: translateX(65px);
+  transition: 0, 5s;
+}
+.botonver:hover {
+  background: whitesmoke;
+  height: 50px;
 }
 
 /* Nosotros*/
@@ -226,11 +253,12 @@
 
 .nuestras-marcas {
   font-size: 40px;
-  color: #8C0303;
+  color: white;
   text-align: center;
-  text-decoration: underline;
+  background-color: #8C0303;
 }
-.nuestras-marcas marcas {
+
+.marcas {
   width: 80%;
   margin: auto;
   -o-object-fit: cover;
@@ -288,23 +316,10 @@
 .piedepagina {
   padding: 10px;
   font-size: medium;
-  color: whitesmoke;
-  background-color: #730D0D;
+  color: white;
+  background-color: black;
   text-align: center;
   font-family: "Montserrat", sans-serif;
 }
 
-/*Media Query*/
-@media(max-width: 1024px){
-
-}
-
-@media(max-width: 992px){
-
-}
-@media(max-width: 768px){
-
-}
-@media(max-width: 480px){
-
-}
+/*Media Query*//*# sourceMappingURL=style.css.map */
