--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -7,6 +7,7 @@
     margin: 50px auto 50px auto;
     padding: 10px;
     border-radius: 5px;
+    translate: 250px;
 }
    
 .form-contactos-grupo{
@@ -30,7 +31,10 @@
 .form-contactos-grupo-input::placeholder{
     color: $color-contraste;
 }
-
+.mapa{
+    padding: 20px;
+    translate: 0px -350px;
+}
 
 .botonformulario{ 
     width: 100%;
@@ -40,4 +44,16 @@
     font-weight: bold;
     padding: 10px 5px;
     border-radius: 5px;
+}
+.redes-container{
+   margin: 0;
+   display: flex;
+   translate: 700px -400px;
+   list-style: none;
+}
+
+a{
+    color: $color-secundario;
+    margin: 10px;
+    justify-content: flex-end;
 }
