--- a/scss/_inicio.scss
+++ b/scss/_inicio.scss
@@ -8,7 +8,9 @@
     display: flex;
     justify-content:space-around;
     align-items: center;
+    flex-wrap: wrap;
 }
+
 .cuotas {
     width: 200px;
     height: 200px;
@@ -18,7 +20,7 @@
     margin: 10px;
     padding: 10px;
     display: flex;
-    flex-direction: column;
+    flex-direction:column;
     gap: 20px;
     text-align: center;
     
@@ -94,6 +96,8 @@
     flex-wrap: wrap;
     justify-content: space-around;
     gap: 25px;
+    margin-bottom: 25px;
+
 
     título{
         color:$color-contraste;
@@ -104,11 +108,11 @@
 }
 
 .sol {
-    width: 300px;
+    width: 250px;
     font-size:small;
     background-color:$color-secundario;
     margin: 10px;
-    padding: 25px;
+    padding: 25px 10px 25px 10px;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -123,11 +127,11 @@
 }
 
 .rx {
-    width: 300px;
+    width: 250px;
     font-size:small;
     background-color:$color-secundario;
     margin: 10px;
-    padding: 25px;
+    padding: 25px 10px 25px 10px;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -142,11 +146,11 @@
 }
 
 .lc {
-    width: 300px;
+    width: 250px;
     font-size:small;
     background-color:$color-secundario;
     margin: 10px;
-    padding: 25px;
+    padding: 25px 10px 25px 10px ;
     display: flex;
     position: relative;
     flex-direction: column;
@@ -164,7 +168,7 @@
     background-color:$color-contraste;
     color: $color-secundario;
     border: 0px;
-    transform: translateX(65px);
+    transform:translate(65px);
     transition: 0,5s;
     &:hover {
         background: whitesmoke;
