--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -2,7 +2,7 @@
 /*Footer*/
 .piedepagina {
     padding: 20px;
-    font-size: small;
+    font-size:smaller;
     color: $color-contraste;
     background-color:black;
     text-align: center;
