--- a/scss/_navegador.scss
+++ b/scss/_navegador.scss
@@ -1,18 +1,25 @@
 /* Navegador*/
+@media (max-width:1024px){
+    header{
+        position: relative;
+    }
+}
 .navegador {
-    background-color: $color-contraste;
-    width: 100%;
-    position: sticky;
-    top: 0px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    position: relative;
 }
 
 .ícono-menu{
     font-size: 25px;
-    color: white;
-    display: none;
+    color: $color-secundario;
+    display: flex;
+    position: absolute;
+    margin: 10px;
+    top: 0;
+    right: 0;
+    text-align: center;
+}
+.ícono-menu:hover+.navegador-links{
+    right: 0;
 }
 
 .logo {
@@ -24,11 +31,17 @@
  }
 
 .navegador-links { 
+   position: absolute;
+   top: 0;
+   right: -500px;
+   width: 250px;
+   height: 100vh;
+   padding-top: 70px;
+   background-color: $color-contraste;
    display: flex;
-   gap: 20px;
-   padding: 40px 10px;
-   text-align: right;
-   font-weight: bold;
+   flex-direction: column;
+   gap: 10px;
+   align-items: center;
 }
 
 .navegador-link{
@@ -36,16 +49,11 @@
     a{
         color: black;
         display: block;
-        text-decoration: none;
+        text-decoration:none;
+        font-size: 25px;
     }
 }
-
-@media(max-width:1024px){
-    header{
-        position: relative;
-    }
-    
-    .ícono-menu {
+.ícono-menu {
         display: flex;
         position: absolute;
         font-size: 25px;
@@ -55,7 +63,7 @@
         right:0;
         text-align: center;
     }
-    .navegador-links{
-        display: none;
+    .navegador-links:hover{
+        right: 0;
     }
-}
+    
