--- a/_productos.scss
+++ b/_productos.scss
@@ -3,3 +3,7 @@
     justify-content:space-around;
     align-items: center;
 }
+.btn-comprar{
+    color: $color-primario;
+    align-items: flex-end;
+}
